<resources>
    <string name="app_name">taskmagang</string>
    <string name="result">result</string>
    <string name="reverse">reverse</string>
    <string name="check">check</string>
    <string name="input_text">input text</string>
    <string name="input_value">input value</string>
    <string name="convert_time">convert time</string>
    <string name="cek_polindrome">cek polindrome</string>
    <string name="reverse_word">reverse word</string>
    <string name="check_polindrome">check polindrome</string>
    <string name="check_email">check Email</string>
    <string name="hello_world">Hello World</string>
</resources>